@@ -4,7 +4,7 @@
 The ancient gate of the empire beside the Yellow River and the Yangtze has been quietly opened by the West in this romantic age. Will it resist the invaders, remain independent, or be swallowed by foreign powers? Or will it abandon tradition and embrace the new age?
 
 Beta Testing
-Current version: beta-0.3.3
+Current version: beta-0.3.4
 
 [img]https://i.imgur.com/v4nnIaO.png[/img]
 [*]50+ new historical or non-historical events.
