@@ -12,6 +12,9 @@
 			save_scope_as = taiwan_scope
 		}
 	}
+	modifiers_while_active = {
+		modifier_mandate_of_heaven
+	}
 	complete = {
 		custom_tooltip = {
 			text = china_recognized_tt
@@ -65,7 +68,7 @@
 	}
 	on_fail = {
 		trigger_event = {
-			id = warlord_china_events.100
+			id = warlord_china_events.400
 		}
 	}
 	on_complete = {
@@ -77,7 +80,7 @@
 		value = var:china_warlord_explosion
 	}
 	goal_add_value = {
-		add = 6
+		add = 5
 	}
 	progressbar = yes
 	on_weekly_pulse = {
