@@ -29,3 +29,4 @@
   modifier_plague_lockdown: "Plague Lockdown"
   modifier_wuxu_authority: "Abuse of Power"
   modifier_conservatism_grow: "Conservatism Grow"
+  modifier_mandate_of_heaven: "Mandate of Heaven"
