@@ -29,3 +29,4 @@
   modifier_plague_lockdown: "鼠疫隔离"
   modifier_wuxu_authority: "维新派滥权"
   modifier_conservatism_grow: "保守派抬头"
+  modifier_mandate_of_heaven: "天朝上国"
